Formatação css da página

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Git e Github</title>
 </head>
 <body>
+
+    <h1>teste 123</h1>
+
+    
+
+    <p>
+        asdasd
+    </p>
+
     
 </body>
 </html>
