alterado cor de fundo da página inicial

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h2>titulo feito por bot</h2>
 
     <p>
-        asdasd
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Quisquam excepturi mollitia vitae rem unde asperiores assumenda ad laboriosam eligendi. Iure, maiores. 
+        Assumenda laboriosam quaerat sequi ut! Obcaecati corporis id sapiente.
     </p>
 
     
